# complex-tokenization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
benchmarks/: bench_chinese.py  bench_scaling.py  bench_singletons.py  bench_tokenizers.py  streaming_vs_inmemory.py
complex_tokenization/: __init__.py  draw.py  fast_bpe_trainer.py  graph.py  pretokenizer.py  tokenizer.py  trainer.py
complex_tokenization/chinese/: create_dictionary.py  dictionary.json  frequency.py  ideographic_description_sequences.py
complex_tokenization/examples/: bne.py  boundless_bpe.py  bpe.py  super_bpe.py  utils.py
complex_tokenization/graphs/: settings.py  units.py  utf8.py  words.py
complex_tokenization/languages/chinese/: .gitignore  create_dictionary.py  frequency.py  graph.py  ideographic_description_sequences.py
complex_tokenization/languages/hebrew/: decompose.py
examples/: chinese.py  multilingual.py
fast/: .gitignore  Cargo.toml  README.md  conftest.py  pyproject.toml
fast/python/complex_tokenization_fast/: __init__.py  graph.py  tokenizer.py  trainer.py
fast/python/complex_tokenization_fast/graphs/: settings.py  units.py  words.py
fast/python/complex_tokenization_fast/languages/chinese/: dictionary.json  graph.py  ideographic_description_sequences.py
fast/python/complex_tokenization_fast/languages/hebrew/: decompose.py
fast/src/: graph.rs  ingest.rs  lib.rs  settings.rs  trainer.rs  units.rs
fast/src/pretok/: mask.rs  mod.rs  o200k.rs  o200k_family.rs  unicode.rs
tests/: conftest.py  test_benchmark.py  test_chinese.py  test_compression.py  test_edge_cases.py  test_fast_bpe.py  test_graph.py  test_imports.py  test_pretokenizer.py  test_reference_bpe.py  test_scaling.py  test_singleton_perf.py  test_singletons.py  test_tokenizer_api.py  test_trainer.py  utils.py
tests/languages/: test_chinese.py  test_chinese_training.py  test_hebrew.py  test_hebrew_training.py
tests/tokenizers/: test_bne.py  test_boundless_bpe.py  test_bpe.py  test_super_bpe.py  test_tie_break.py
